# server/src/main/resources/openapi/shared-index-1.0.yaml
@@ -314,7 +314,6 @@ paths:
       - $ref: headers/okapi-url.yaml
       - $ref: parameters/limit.yaml
       - $ref: parameters/matchkeyid.yaml
-      - $ref: parameters/maxiterations.yaml
       - $ref: parameters/query.yaml
       - $ref: parameters/offset.yaml
     get:
@@ -410,6 +409,34 @@ paths:
                 $ref: schemas/clusters.json
         "400":
           $ref: "#/components/responses/trait_400"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /shared-index/clusters/{clusterId}:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - in: path
+        name: clusterId
+        required: true
+        description: cluster identifier
+        schema:
+          type: string
+          format: uuid
+    get:
+      description: Get cluster by identifier
+      operationId: getCluster
+      responses:
+        "200":
+          description: cluster found
+          content:
+            application/json:
+              schema:
+                $ref: schemas/cluster.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
 # Shared error responses
